# learning-game-making

./: CMakeLists.txt  Camera.cpp  Camera.hpp  ErrorOr.hpp  Model.hpp  Object.hpp  OpenGLCamera.cpp  OpenGLCamera.hpp  Renderer2DOpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  fascinating_things_I_learnt.md  main.cpp  vcpkg.json
game/: CMakeLists.txt  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Game.cpp  Game.hpp  Objects.cpp  Objects.hpp  RandomGenerator.cpp  RandomGenerator.hpp
runtime/: .fragment_shader_basic.glsl.swp  2d_fragment_shader.glsl  2d_fragment_shader_no_texture.glsl  2d_vertex_shader.glsl  fragment_shader.glsl  fragment_shader_solid.glsl  fragment_shader_texture.glsl  vertex_shader.glsl  vertex_shader_basic.glsl  vertex_shader_batch.glsl  vertex_shader_texture.glsl  wall.jpg:Zone.Identifier
runtime/assets/: tree.pxo
test/game/: test_collision.cpp
